--- a/css/style.css
+++ b/css/style.css
@@ -8,8 +8,8 @@
     width: 100%;
     /* height: 100vh; */
     min-height: 100vh;
-    /* background-color: rgb(97, 80, 80); */
-    background-image: linear-gradient(rgba(0,0,0,0.75), rgba(20, 20, 20, 0.75)),url(bgImage.jpg);
+    background-color: rgb(8, 1, 42);
+    /* background-image: linear-gradient(rgba(0,0,0,0.75), rgba(20, 20, 20, 0.75)),url(bgImage.jpg); */
     background-size: cover;
     background-position: center;
     transition: all ease 2s;
@@ -47,7 +47,7 @@
 }
 #nav-menu .logo a:hover{
     /* color: #009688; */
-    color: #92bcb5;
+    color: #ac92bc;
 }
 #nav-menu .menu-list{
     display: inline-flex;
